k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toolmonk
  labels:
    name: toolmonk
