k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolmonk
  namespace: toolmonk
  labels:
    app: toolmonk
spec:
  type: ClusterIP
  selector:
    app: toolmonk
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
